plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    alias libs.plugins.modDevGradleLegacy
    alias libs.plugins.lombok
    alias libs.plugins.spotless
    alias libs.plugins.kotlin.jvm
    alias libs.plugins.kotlin.plugin
}

version = mod_version

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources { srcDir 'src/generated/resources' }

apply from: "$rootDir/gradle/scripts/moddevgradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/spotless.gradle"

generateModMetadata.doFirst {
    mkdir('run/client')
    mkdir('run/server')
    mkdir('run/data')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << "-Xlint:-deprecation" << "-Xlint:-removal"
}

jar {
    exclude "**/.cache"
    exclude "**/SimplifiedToTraditional.properties"
}

java {
    withSourcesJar()
}
afterEvaluate {
    tasks.register("signJar") {
        doLast {
            def destDir = "$buildDir/libs"
            def originalJar = "${buildDir}/libs/${mod_id}-${version}.jar"
            mkdir(destDir)
            ant.signjar(
                    jar: originalJar,
                    destDir: destDir,
                    alias: "gtokey",
                    storetype: "jks",
                    keystore: "keystore.jks",
                    storepass: System.getenv('GTO_STOREPASS'),
                    keypass: System.getenv('GTO_KEYPASS'),
                    preservelastmodified: "true",
                    tsaurl: "http://timestamp.sectigo.com?td=sha256",
            )
        }
        outputs.upToDateWhen {
            false
        }
        onlyIf {
            new File("${projectDir}/keystore.jks").exists()
        }
    }

    reobfJar.finalizedBy signJar
}
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
